--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,33 @@
+.container {
+    background-size: 100%;
+    background-color: bisque;
+    height: 500px;
+
+
+}
+.title {
+    margin: auto;
+    width: 100%;
+    height: 150px;
+    text-align: center;
+}
+#startBtn {
+    background-color: blue;
+    color: white;
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+}
+
+#clock {
+    background-color: aqua;
+    margin: auto;
+    width: 150px;
+    height: 50px;
+    font-size: 25px;
+    color: black;
+
+}
+
+
 
